--- a/app/assets/styles/main.css
+++ b/app/assets/styles/main.css
@@ -23,3 +23,7 @@ body {
 *::-webkit-scrollbar-track {
   background: transparent;
 }
+
+.container {
+  @apply mx-auto w-full max-w-[1312px] px-4;
+}
