--- a/app/assets/styles/main.css
+++ b/app/assets/styles/main.css
@@ -25,5 +25,5 @@ body {
 }
 
 .container {
-  @apply mx-auto w-full max-w-[1312px] px-4;
+  @apply mx-auto w-full max-w-full px-4 lg:max-w-[1312px];
 }
