--- a/app/assets/styles/main.css
+++ b/app/assets/styles/main.css
@@ -24,6 +24,6 @@ body {
   background: transparent;
 }
 
-.container {
+.container-wrapp {
   @apply mx-auto w-full max-w-full px-4 lg:max-w-[1312px];
 }
